framec_tests/language_specific/csharp/v3_outline/negative/test_action_with_frame.frm
@target csharp

system S {
    actions:
        DoStuff() {
            -> $Next
        }
}
